# bid

./: .dockerignore  .env.docker.example  .gitignore  AI标书生成项目实施方案计划书（4月18日）.docx  Dockerfile  README.md  docker-compose.yaml  fastapi_backend.py  requirements.txt
4.15测试-箱室类/招标文件/: GKZH-25ZXH856-401.88项目箱室设备采购-招标文件-发布版1128.docx  测试.docx
4.15测试-箱室类/输出模版/: GKZH-25ZXH856-401.88项目箱室设备采购-招标文件-发布版1128_商务标模版.docx  GKZH-25ZXH856-401.88项目箱室设备采购-招标文件-发布版1128_商务标模版.待填项清单.json  GKZH-25ZXH856-401.88项目箱室设备采购-招标文件-发布版1128_技术标模版.docx
Insert/: .gitignore  main.py  pyproject.toml
Insert/services/: knowledge_service.py  llm_service.py  word_service.py
Insert/static/: app.js  index.html  styles.css
frontend/: index.html  knowledge-utils.js  knowledge-utils.test.cjs  qqq.html
scripts/: extract_bid_template_items.py  extract_bid_template_items_ai.py  extract_tender_metadata_ai.py  fill_bid_template.py  generate_bid_templates.py  knowledge_store.py  platform_file_client.py  prepare_qwen_fill_request.py  validate_qwen_docx_xml_items.py
string/: GKZH-25ZXH856-401.88项目箱室设备采购-招标文件-发布版1128_商务标模版.docx  GKZH-25ZXH856-401.88项目箱室设备采购-招标文件-发布版1128_技术标模版.docx
tests/: test_extract_bid_template_items.py  test_extract_bid_template_items_ai.py  test_extract_tender_metadata_ai.py  test_fastapi_backend_routes.py  test_fill_bid_template.py  test_frontend_real_extract_flow.py  test_generate_bid_templates_links.py  test_knowledge_store.py  test_prepare_qwen_fill_request_config.py  test_validate_qwen_docx_xml_items.py
